<?xml version="1.0" encoding="utf-8"?>
<!--
/* //device/tests/ComplexLayout/res/values/strings.xml
**
** Copyright 2007, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->

<!-- This file contains resource definitions for displayed strings, allowing
     them to be changed based on the locale and options. -->

<resources>
    <string name="test_word">test</string>
    <string name="test_sentence">This is a test sentence.</string>
    <string name="test_short_paragraph">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Cras consectetuer dolor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Praesent nec sapien nec orci feugiat sodales.</string>
    <string name="test_long_paragraph">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Cras consectetuer dolor. Vivamus bibendum semper lorem. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Praesent nec sapien nec orci feugiat sodales. Praesent ut tortor. Suspendisse sed magna quis ante pellentesque faucibus. Nunc feugiat. Quisque porta. Nunc velit magna, varius in, fringilla quis, ornare eget, magna. Suspendisse potenti. Nam eu felis. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Quisque vulputate suscipit magna. Nunc vestibulum lorem ac odio.</string>
    <string name="header_absolute">Absolute view</string>

    <string name="header_relative">Relative layout</string>
    <string name="header_linear">Linear layout</string>

    <string name="relative_button1">Button1</string>
    <string name="relative_button2">Button2</string>
    <string name="relative_button3">Button3</string>
    <string name="relative_button4">Button4</string>
    <string name="relative_button5">Button5</string>
    <string name="relative_button6">Button6</string>
    <string name="relative_button7">Button7</string>
    <string name="relative_button8">Button8</string>
    <string name="response">Type Response:</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. In congue varius tortor. Etiam dolor nisl, lacinia et, venenatis vitae, nonummy ut, mi. Praesent a risus. Ut nisi. Nullam nonummy, lorem vel bibendum pellentesque, dolor massa egestas risus, luctus vehicula metus metus non nibh. Suspendisse potenti. In malesuada dolor. Fusce sodales fermentum metus. Mauris bibendum. Morbi faucibus eros sed enim. Pellentesque bibendum diam a justo. Suspendisse condimentum. Nam luctus, turpis molestie aliquet congue, nulla ante vulputate ipsum, nec nonummy neque tellus eu mi. Phasellus semper. Aenean adipiscing erat nec turpis. Curabitur euismod sapien quis nisl. Pellentesque tempor tristique lectus. Praesent fermentum.</string>
</resources>
