<?xml version="1.0" encoding="utf-8"?>
<!--
/* //device/tests/SimpleLayout/res/layout/simple_layout.xml
**
** Copyright 2007, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->

<!-- This file describes the layout of the main SimpleLayout activity
     user interface.
 -->

<!-- The top view is a layout manager that places its child views into
     a row, here set to be vertical (so the first is at the top) -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout android:id="@+id/replay_pane"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="True"
            android:background="@color/replay_background">

            <TextView android:id="@+id/instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/response" />

            <EditText android:id="@+id/entry"
                android:layout_width="match_parent" 
                android:layout_height="44dip" 
                android:layout_below="@id/instructions"/>
  
            <Button android:id="@+id/ok" 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                android:layout_below="@id/entry"
                android:layout_alignParentRight="true"
                android:text="@string/ok" />

            <Button android:id="@+id/cancel"
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/ok"
                android:layout_alignTop="@id/ok"
                android:text="@string/cancel" />

        </RelativeLayout>

        <ScrollView android:id="@+id/scroll_pane"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/replay_pane">

            <TextView android:id="@+id/text_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/text"/>
            
            <requestFocus/>

        </ScrollView>

    </RelativeLayout>
    
</LinearLayout>
